@@ -13,32 +13,32 @@ plan skip_all => 'Test::Deep required' if $@;
 my @tests = (
     {
         args   => [ { user_id => '1234,6543,3333' } ],
-        expect => { user_id => [ 1234, 6543, 3333 ] },
+        expect => { user_id => '1234,6543,3333' },
         name   => 'hash: comma delimited',
     },
     {
-        args   => [ user_id => '1234,6543,3333' ],
-        expect => { user_id => [ 1234, 6543, 3333 ] },
+        args   => [ { user_id => '1234,6543,3333' } ],
+        expect => { user_id => '1234,6543,3333' },
         name   => 'list: comma delimited',
     },
     {
         args   => [ { user_id => [ 1234, 6543, 3333 ] } ],
-        expect => { user_id => [ 1234, 6543, 3333 ] },
+        expect => { user_id => '1234,6543,3333' },
         name   => 'hash: arrayref',
     },
     {
         args   => [ { screen_name => 'fred,barney,wilma' } ],
-        expect => { screen_name => [qw/fred barney wilma/] },
+        expect => { screen_name => 'fred,barney,wilma' },
         name   => 'hash: comma delimited',
     },
     {
-        args   => [ screen_name => ['fred', 'barney', 'wilma'] ],
-        expect => { screen_name => [qw/fred barney wilma/] },
+        args   => [ { screen_name => ['fred', 'barney', 'wilma'] } ],
+        expect => { screen_name => 'fred,barney,wilma' },
         name   => 'list: arrayref',
     },
     {
-        args   => [ screen_name => ['fred', 'barney' ], user_id => '4321,6789' ],
-        expect => { screen_name => [qw/fred barney/], user_id => [ 4321, 6789 ] },
+        args   => [ { screen_name => ['fred', 'barney' ], user_id => '4321,6789' } ],
+        expect => { screen_name => 'fred,barney', user_id => '4321,6789' },
         name   => 'list: arrayref screen_name and comma delimited user_id',
     },
 );
@@ -63,7 +63,7 @@ for my $test ( @tests ) {
 
     my %query = $req->uri->query_form;
     for my $arg ( keys %{ $test->{expect} } ) {
-        cmp_bag([ split /,/, $query{$arg} ], $test->{expect}{$arg}, "$test->{name} [$arg]");
+        is $query{$arg}, $test->{expect}{$arg}, "$test->{name} [$arg]";
     }
 }
 
